# CUnplugged

./: .gitignore  CMakeLists.txt  CUnplugged  LICENSE  Makefile  README.md  library\log.txt
src/: main.c
src/albums/: albums.c  albums.h
src/audio_controller/: audio_controller.c  audio_controller.h
src/colors/: colors.h
src/command_log/: command_log.c  command_log.h
src/interface/: interface.c  interface.h
src/lib/miniaudio/: miniaudio.c
src/playlist/: playlist.c  playlist.h
src/songs/: songs.c  songs.h
src/utils/: utils.c  utils.h
